# LCA-challenges-template

./: .env.example  .env.prod.example  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  objective.md  package-lock.json  package.json  playwright.config.ts
backend/: .env.test  Dockerfile  Dockerfile.prod  jest.config.cjs  package-lock.json  package.json  pyproject.toml
backend/migrations/: 001_initial_schema.sql
backend/src/: __init__.py  config.py  exceptions.py  index.ts  logging_config.py  main.py
backend/src/__tests__/: api.test.ts  validation.test.ts
backend/src/api/: server.ts
backend/src/db/: __init__.py  client.ts  connection.py  health.py  migrate.ts  migration_runner.py  migrations.py  plants-repository.ts  telemetry-repository.ts
backend/src/middleware/: __init__.py  correlation.py
backend/src/models/: __init__.py  care_plan.py  common.py  device.py  health_check.py  plant.py  settings.py  telemetry.py
backend/src/mqtt/: client.ts  subscriber.ts
backend/src/repositories/: __init__.py  alert.py  care_plan.py  device.py  plant.py  settings.py  telemetry.py
backend/src/routers/: devices.py  plants.py  settings.py
backend/src/schema/: plant-config.ts  telemetry.ts
backend/tests/: __init__.py  conftest.py  test_care_plan.py  test_device_plant.py  test_devices.py  test_discord.py  test_health.py  test_heartbeat.py  test_llm_settings.py  test_logging.py  test_migrations.py  test_mqtt_auth.py  test_mqtt_subscriber.py  test_plants.py  test_telemetry.py  test_threshold.py
(+552 files in other folders)
